--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -63,7 +63,7 @@ form input {
 }
 
 button {
-    background-color: #333;
+    background-color: var(--color-secondary);
     color: white;
     border: none;
     padding: 10px;
@@ -71,7 +71,7 @@ button {
 }
 
 button:hover {
-    background-color: #555;
+    background-color: var(--color-secondary-lighter);
 }
 
 .icon {
@@ -185,4 +185,21 @@ tr:nth-child(even) {
 
 #bookForm > *:not(.combined) {
     margin-bottom: 1em; /* Add space below each non-combined input */
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow */
+    z-index: 1;
+}
+
+.dropdown-content.show {
+    display: flex;
+}
+
+
+.modal.show {
+    display: block;
 }
