--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 
-<h2>Bibliothèque</h2>
+<div class="header-container">
+    <h2>Bibliothèque</h2>
 
-<div>
-    <button id="addBookButton" class="icon">
-        <i class="fa-solid fa-plus"></i>
-    </button>
-    <div id="addBookDropdown" class="dropdown-content">
-        <button id="manualAddButton">Ajout manuel</button>
-        <button id="isbnAddButton">Ajout par ISBN</button>
-        <button id="barcodeAddButton">Ajout par code-barres</button>
+    <div>
+        <button id="addBookButton" class="icon">
+            <i class="fa-solid fa-plus"></i>
+        </button>
+        <div id="addBookDropdown" class="dropdown-content">
+            <button id="manualAddButton">Ajout manuel</button>
+            <button id="isbnAddButton">Ajout par ISBN</button>
+            <button id="barcodeAddButton">Ajout par code-barres</button>
+        </div>
     </div>
 </div>
 
