--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,4 +1,6 @@
 :root {
+    font-size: 16px;
+
     --color-primary: #2C2F48;
     --color-primary-lighter: #41435a;
     --color-primary-lighter-2: #56586d;
@@ -109,6 +111,10 @@ main {
     align-items: center;
 }
 
+#addBookDropdownContainer {
+    position: relative;
+}
+
 #addBookButton {
     background-color: var(--color-accent);
 }
@@ -119,7 +125,13 @@ main {
     flex-direction: column;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1;
-    right: 0%;
+    right: 0;
+    white-space: nowrap;
+}
+
+.dropdown-content button {
+    text-align: left;
+    /*font-size: medium;*/
 }
 
 .dropdown-content.show {
@@ -148,6 +160,7 @@ button {
     border: none;
     padding: 10px;
     cursor: pointer;
+    font-size: inherit;
 }
 
 button:hover {
