--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -5,7 +5,7 @@
 <div class="header-container">
     <h2>Bibliothèque</h2>
 
-    <div>
+    <div id="addBookDropdownContainer">
         <button id="addBookButton" class="icon">
             <i class="fa-solid fa-plus"></i>
         </button>
@@ -55,7 +55,7 @@
 
 <div id="bookModal" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
+        <!--        <span class="close">&times;</span>-->
 
         <div id="viewMode">
             <p><strong>Titre :</strong> <span id="viewMode-title"></span></p>
