--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -231,25 +231,25 @@ tr:nth-child(even) {
 }
 
 .modal-content {
+    position: relative;
     background-color: var(--color-primary-lighter);
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid var(--color-primary-lighter-2);
     width: 80%;
     max-width: 500px;
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    color: var(--color-text-white);
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
+.close:hover {
+    color: var(--color-text-white-lighter);
     cursor: pointer;
 }
 
